--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -1,20 +1,54 @@
+/* Reset do CSS */
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
+
 body {
     background-image: url('https://images.unsplash.com/photo-1557683316-973673baf926?ixlib=rb-1.2.1&w=1000&q=80');
     background-size: auto 100vh;
     font-family: Arial;
+    font-size: 10px;
     height: 100vh;
+  }
+/* Breakpoints - Caso a tela tenha ao menos 400px, os estilos abaixo serão carregados */
+  @media (min-width: 400px) {
+    body {
+        font-size: 14px;
+    }
+  }
+/* Breakpoints - Caso a tela tenha ao menos 600px, os estilos abaixo serão carregados */
+  @media (min-width: 600px) {
+    body {
+        font-size: 18px;
+    }
+  }
+
+  header {
+      height: 100vh;
+      display: flex;
+      justify-content: center;
+      align-items: center;
   }
   
   .menu {
     background-color: white;
+    position: fixed;
+    width: 100vw;
+    top: 0px;
   }
-  
+
   .menu ul {
     display: flex;
     justify-content: space-around;
   }
   .menu li {
     list-style: none;
+  }
+
+  .menu a {
+    /*  background-color: red;*/
   }
   
   a {
@@ -32,7 +66,17 @@ body {
     color: whitesmoke;
     text-align: center;
   }
-  
+
+  /* Tamanho do titulo altera para 4x o tamanho da fonte do título
+  .site-title {
+      font-size: 4em;
+  }
+*/  
   .site-subtitle {
     font-style: italic;
+  }
+
+  .img-about {
+    height: 180px;  
+    width: 180px;
   }
